# Zero-proof

./: .env.example  .gitattributes  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  license-check.py  rust-toolchain.toml  start.ps1  summary.md  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_request.yml  feature.yml
.github/scripts/: update-cli-docs.js
.github/workflows/: bench_pr.yml  main.yml  nightly.yml  release.yml  risc0-ethereum.yml  update-cli-docs.yml  website.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/commands/: build.rs  config.rs  mod.rs  prove.rs  server.rs  verify.rs
examples/: Cargo.toml
examples/bevy/: README.md
examples/bevy/core/src/: lib.rs
examples/bevy/methods/guest/: Cargo.toml
examples/bevy/methods/guest/src/: main.rs
examples/bevy/src/: main.rs
examples/bls12_381/: README.md
examples/bls12_381/methods/guest/: Cargo.toml
examples/bls12_381/src/: main.rs
examples/bn254/: README.md
examples/bn254/core/src/: lib.rs
examples/bn254/methods/guest/: Cargo.toml
examples/bn254/src/: main.rs
examples/browser-verify/: README.md
examples/browser-verify/src/: lib.rs
examples/browser-verify/tests/: app.rs
examples/c-guest/: README.md
examples/c-guest/guest/: main.c  platform.h
examples/c-guest/host/: build.rs
examples/c-guest/host/src/: main.rs
examples/c-guest/platform/src/: lib.rs
examples/c-kzg/: README.md
examples/c-kzg/core/src/: lib.rs
examples/c-kzg/methods/: Cargo.toml  build.rs
examples/c-kzg/methods/guest/: Cargo.toml
examples/c-kzg/methods/guest/src/: main.rs
examples/c-kzg/src/: main.rs
examples/chess/: README.md
examples/chess/core/src/: lib.rs
examples/chess/methods/guest/src/: main.rs
examples/chess/src/: main.rs
examples/composition/: README.md
examples/composition/methods/guest/src/: main.rs
examples/composition/src/: main.rs
examples/digital-signature/: README.md
examples/digital-signature/core/src/: lib.rs
examples/digital-signature/methods/guest/src/: main.rs
examples/digital-signature/src/: lib.rs  main.rs
examples/ecdsa/k256/: README.md
examples/ecdsa/k256/methods/guest/: Cargo.toml
examples/ecdsa/k256/methods/src/: lib.rs
examples/ecdsa/k256/src/: main.rs
examples/ecdsa/p256/: README.md
examples/ecdsa/p256/methods/guest/: Cargo.toml
examples/ecdsa/p256/src/: main.rs
examples/groth16-verifier/: README.md
examples/groth16-verifier/src/: main.rs
examples/hello-world/: README.md
examples/hello-world/methods/guest/src/: main.rs
examples/hello-world/src/: lib.rs  main.rs
examples/json/: README.md
examples/json/core/src/: lib.rs
examples/json/methods/guest/src/: main.rs
examples/json/src/: main.rs
examples/jwt-validator/: README.md
examples/jwt-validator/core/src/: lib.rs
examples/jwt-validator/methods/guest/: Cargo.toml
examples/jwt-validator/methods/guest/src/: main.rs
examples/jwt-validator/src/: lib.rs  main.rs
examples/keccak/: README.md
examples/keccak/methods/guest/: Cargo.toml
examples/keccak/src/: main.rs
examples/password-checker/: README.md
examples/password-checker/core/src/: lib.rs
examples/password-checker/methods/guest/: Cargo.toml
examples/password-checker/methods/guest/src/: main.rs
examples/password-checker/src/: main.rs
examples/profiling/: README.md
examples/profiling/src/: main.rs
examples/prorata/: README.md
examples/prorata/core/src/: lib.rs
examples/prorata/methods/guest/src/: main.rs
examples/prorata/src/: main.rs
examples/riscv-vm/: Cargo.toml
examples/riscv-vm/methods/: Cargo.toml
examples/riscv-vm/methods/guest/: Cargo.toml
examples/riscv-vm/methods/src/: lib.rs
examples/riscv-vm/src/: lib.rs  main.rs
examples/sha/: README.md
examples/sha/methods/guest/: Cargo.toml
examples/sha/src/: main.rs
examples/smartcore-ml/: Cargo.toml  README.md
examples/smartcore-ml/methods/guest/: Cargo.toml
examples/smartcore-ml/methods/guest/src/: main.rs
examples/smartcore-ml/src/: main.rs
examples/tsc/: Cargo.toml
examples/tsc/methods/: Cargo.toml
examples/tsc/methods/guest/: Cargo.toml
examples/tsc/methods/guest/src/: main.rs
examples/tsc/src/: lib.rs  main.rs
examples/voting-machine/: README.md
examples/voting-machine/core/src/: lib.rs
examples/voting-machine/src/: lib.rs
examples/wasm/: README.md
examples/wasm/methods/: build.rs
examples/wasm/methods/guest/src/: main.rs
examples/wasm/src/: main.rs
examples/wordle/: README.md
examples/wordle/core/src/: lib.rs
examples/wordle/methods/guest/src/: main.rs
examples/wordle/src/: main.rs  wordlist.rs
examples/xgboost/: README.md
examples/xgboost/methods/guest/src/: main.rs
examples/xgboost/src/: main.rs
groth16_proof/: README.md
risc0/povw/guests/log-builder/: Cargo.toml
risc0/povw/guests/log-builder/src/: main.rs
rzup/: README.md
server/: Cargo.toml
server/src/: main.rs
services/build-service/: Cargo.toml  Dockerfile
services/build-service/src/: main.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: main.rs
website/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js  sidebarsApi.js  vercel.json
(+1150 files in other folders)
