[package]
name = "zp"
version = "0.1.0"
edition = { workspace = true }

[[bin]]
name = "zp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
base64 = "0.22"
hex = "0.4"
bincode = "1.3"

[features]
local = ["risc0-zkvm", "risc0-build"]
default = []

[dependencies.risc0-zkvm]
path = "../risc0/zkvm"
features = ["prove"]
optional = true

[dependencies.risc0-build]
path = "../risc0/build"
optional = true
