[workspace]
resolver = "2"
members = [
    "browser-verify",
    "c-guest/host",
    "c-guest/platform",
    "chess",
    "chess/core",
    "composition",
    "digital-signature",
    "digital-signature/core",
    "groth16-verifier",
    "hello-world",
    "json",
    "json/core",
    "jwt-validator",
    "jwt-validator/core",
    "profiling",
    "prorata",
    "riscv-vm",
    "prorata/core",
    "voting-machine",
    "voting-machine/core",
    "wasm",
    "wordle",
    "wordle/core",
    "xgboost",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
gpu-guard = { path = "../tools/gpu-guard" }

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
