[package]
name = "zk-prover-server"
version = "1.0.0"
edition = { workspace = true }

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
risc0-zkvm = { path = "../risc0/zkvm", features = ["prove"] }
risc0-binfmt = { path = "../risc0/binfmt" }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
bincode = "1.3"
hex = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
bytes = "1"
http-body-util = "0.1"
