[package]
name = "riscv-vm"
version = "0.1.0"
edition.workspace = true

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]

[dependencies]
riscv-vm-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
