[package]
name = "validator"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
jwt-core = { path = "../../core/" }
risc0-zkvm = { path = "../../../../risc0/zkvm", default-features = false, features = ["std"] }

[patch.crates-io]
rsa = { git = "https://www.github.com/SURUJ404/Zero-proof/RustCrypto-RSA.git", rev = "v0.9.9-risczero.0" }
