[package]
name = "risc0-povw-log-builder"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/suruj404/zero-knowledgerisc"
repository = "https://github.com/suruj404/zero-knowledgerisc"

[workspace]

[dependencies]
borsh = { version = "1.5", default-features = false, features = ["std"] }
risc0-povw = { path = "../../", default-features = false, features = ["guest"] }
risc0-zkvm = { path = "../../../zkvm/", default-features = false, features = ["std", "unstable"] }
ruint = { version = "1.15" }
